make small edits and fix size of media on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -102,18 +102,6 @@ img {
   margin: auto;
 }
 
-@media (max-width: calc(500px + 2rem)) {
-  /* Your styles for small screens go here */
-  img {
-    max-width: 100%;
-    display: block;
-    margin: auto;
-  }
-
-}
-
-
-
 
 figcaption {
   text-align: center;
@@ -144,6 +132,7 @@ figcaption {
 
 .content-media{
   width: 500px;
+  max-width: 100%;
   margin: auto;
 }
 
@@ -156,5 +145,17 @@ figcaption {
 
 .brutal img{
   margin: 0;
+}
+
+@media (max-width: calc(500px + 2rem)) {
+  /* Your styles for small screens go here */
+  img {
+    max-width: 100%;
+    display: block;
+    margin: auto;
+  }
+
+  
+
 }
 
